--- a/web/1.html
+++ b/web/1.html
@@ -10,12 +10,12 @@
 
 
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html"><font color="red">WEB</a></h1>
 <ul>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/fAI4iBbTlTk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<li>1. <a href="1.html"></a>HTML</li>
-<li>2. <a href="2.html">CSS</a></li>
-<li>3. <a href="3.html">JARVA SCRIPT</a></li>
+<li>1. <a href="1.html"></a><font color="red">HTML</li>
+<li>2. <a href="2.html"><font color="red">CSS</a></li>
+<li>3. <a href="3.html"><font color="red">JARVA SCRIPT</a></li>
 </ul>
 <ol>
 <li>egoing</li>
